fix about alignment

--- a/dexter/src/components/about/index.scss
+++ b/dexter/src/components/about/index.scss
@@ -1,9 +1,10 @@
 #about {
-    width: 100%;
     height: 100%;
-    padding: 50px 0;
+    padding: 50px 5%;
     margin: 0;
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 20px;
     background: #000000;
 
@@ -41,12 +42,13 @@
 
         >div:last-child {
             width: 100%;
-            height: 300px;
+            height: 283px;
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: space-between;
             background: #ffffff18;
-            padding: 10px;
+            padding: 50px 10px;
             border-radius: 20px;
 
             >img {
@@ -85,7 +87,7 @@
 
             >div {
                 width: 40%;
-                height: 470px;
+                height: 520px;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -156,7 +158,7 @@
                         height: 25px;
                     }
                     >div{
-                        font-size: 18px;
+                        font-size: 20px;
                     }
                 }
             }
